# MyHwDec

./: CMakeLists.txt  README.md  build_linux.sh  build_win.bat
common/: common.h  utils.h
config/: config.ini
include/: hw_decoder_api.h
sample/: CMakeLists.txt  CMakeLists.txt.backup  build_linux.sh  build_win.bat  test_api.cpp
src/: hw_decoder_api.cpp  utils.cpp
src/videoOption/: FFmpegDecoder.cpp  FFmpegDecoder.h  HwDecoder.cpp  HwDecoder.h
thirdLib/ffmpeg-5.1.2/linux/lib/: libavdevice.so.59.7.100  libavformat.so.59.27.100  libavutil.so.57.28.100  libpostproc.so.56  libswscale.so.6
thirdLib/ffmpeg-5.1.2/linux/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
thirdLib/ffmpeg-5.1.2/linux/share/man/man1/: ffplay-all.1  ffplay.1
thirdLib/libevent-2.1.12/linux/lib/: libevent_core-2.1.so.7  libevent_openssl-2.1.so.7.0.1
thirdLib/libevent-2.1.12/win/lib/: event.lib  event_core.lib  event_extra.lib  event_openssl.lib
